# aida

./: .coverage  .gitignore  GEMINI.md  README.md  cleanup.sh  implementation_report.md  improvements.md  ingest_osquery.py  ingest_packs.py  main.py  pyproject.toml  quantize_db.py  requirements.txt  setup.sh  test_aida_core.py  test_search.py
aida/: agent.py  aida_catalog.py  aida_catalog_schema.json  osquery_rag.py  queries_rag.py  query_library.py  schema_rag.py
aida/examples/: aida_examples.json
assets/: demo.webm
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: aida-chat.ts  index.css
frontend/src/aida-catalog/: AidaBarChart.ts  AidaButton.ts  AidaCard.ts  AidaCpuMeter.ts  AidaDiskUsage.ts  AidaLineChart.ts  AidaLogViewer.ts  AidaMemoryGauge.ts  AidaMetricBar.ts  AidaMultipleChoice.ts  AidaNetworkThroughput.ts  AidaPieChart.ts  AidaSingleSelect.ts  AidaTable.ts  AidaTextBox.ts  index.ts
static/: script.js  style.css
templates/: index.html
tests/: test_aida_core.py  test_query_lib.py  test_search.py
